// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <SectionHeader
    isOpen={false}
    isTransparent={false}
    text="foo"
  >
    <h2
      aria-label="foo"
      className="section-header orion-fusion-theme"
    >
      <span
        className="arrange-wrapper"
      >
        <Arrange
          className="title-arrange"
          fill={
            <span
              aria-hidden={false}
              className="title"
            >
              foo
            </span>
          }
        >
          <div
            className="arrange title-arrange"
          >
            <div
              className="fit"
            />
            <div
              className="fill"
            >
              <span
                aria-hidden={false}
                className="title"
              >
                foo
              </span>
            </div>
            <div
              className="fit"
            />
          </div>
        </Arrange>
      </span>
    </h2>
  </SectionHeader>
</ThemeContextProvider>
`;

exports[`SectionHeader should render a default component 1`] = `
<h2
  aria-label="foo"
  className="section-header"
>
  <span
    className="arrange-wrapper"
  >
    <Arrange
      className="title-arrange"
      fill={
        <span
          aria-hidden={false}
          className="title"
        >
          foo
        </span>
      }
    />
  </span>
</h2>
`;

exports[`SectionHeader should render with an accordion icon in the open position when an 'onClick()' callback and 'isOpen' is passed 1`] = `
<h2
  class="section-header is-interactable"
  tabindex="0"
>
  <button
    aria-expanded="true"
    aria-label="foo"
    class="arrange-wrapper"
    tabindex="-1"
    type="button"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      >
        <span
          class="accordion-icon-wrapper"
        >
          <span
            class="accordion-icon is-open"
          />
        </span>
      </div>
      <div
        class="fill"
      >
        <span
          aria-hidden="true"
          class="title"
        >
          foo
        </span>
      </div>
      <div
        class="fit"
      />
    </div>
  </button>
</h2>
`;

exports[`SectionHeader should render with an accordion icon when an 'onClick()' callback is passed 1`] = `
<h2
  class="section-header is-interactable"
  tabindex="0"
>
  <button
    aria-expanded="false"
    aria-label="foo"
    class="arrange-wrapper"
    tabindex="-1"
    type="button"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      >
        <span
          class="accordion-icon-wrapper"
        >
          <span
            class="accordion-icon"
          />
        </span>
      </div>
      <div
        class="fill"
      >
        <span
          aria-hidden="true"
          class="title"
        >
          foo
        </span>
      </div>
      <div
        class="fit"
      />
    </div>
  </button>
</h2>
`;

exports[`SectionHeader should render without an accordion icon when no 'onClick()' is passed 1`] = `
<h2
  aria-label="foo"
  class="section-header"
>
  <span
    class="arrange-wrapper"
  >
    <div
      class="arrange title-arrange"
    >
      <div
        class="fit"
      />
      <div
        class="fill"
      >
        <span
          aria-hidden="false"
          class="title"
        >
          foo
        </span>
      </div>
      <div
        class="fit"
      />
    </div>
  </span>
</h2>
`;
